--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,4 +1,5 @@
-deploy.ant.properties.file=C:\\Users\\MAQLAB\\AppData\\Roaming\\NetBeans\\8.2\\tomcat90.properties
-j2ee.server.home=C:/Users/MAQLAB/Desktop/apache-tomcat-9.0.13-windows-x64/apache-tomcat-9.0.13
-j2ee.server.instance=tomcat90:home=C:\\Users\\MAQLAB\\Desktop\\apache-tomcat-9.0.13-windows-x64\\apache-tomcat-9.0.13
-user.properties.file=C:\\Users\\MAQLAB\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+deploy.ant.properties.file=C:\\Users\\Rizzo\\AppData\\Roaming\\NetBeans\\8.2\\tomcat80.properties
+j2ee.server.domain=C:/Users/Rizzo/AppData/Roaming/NetBeans/8.2/apache-tomcat-8.0.27.0_base
+j2ee.server.home=C:/Program Files/Apache Software Foundation/Apache Tomcat 8.0.27
+j2ee.server.instance=tomcat80:home=C:\\Program Files\\Apache Software Foundation\\Apache Tomcat 8.0.27:base=apache-tomcat-8.0.27.0_base
+user.properties.file=C:\\Users\\Rizzo\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
